# fastpy_dad

./: .gitignore  build_and_serve.sh  docker-compose.yml
fastpy/: Dockerfile  build.sh  build_and_serve.sh  pyproject.toml  requirements.txt
fastpy/fastpy/: config.py  main.py
fastpy/tests/: conftest.py  test_fastpy.py  test_ping.py
