[tool.poetry]
name = "fastpy"
version = "0.1.0"
description = ""
authors = ["jjuanramos <jjuanramos91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
asyncpg = "0.22.0"
tortoise-orm = "0.16.21"
starlette = "0.13.6"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
